--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
         <div>
             <img src="./img/3d-flame-naked-man-standing-in-front-of-window-at-night.png" alt="">
-            <button>Начать</button>
+            <a href="#" onclick="startBtn()">Начать</ф>
         </div>
     </main>
     <footer></footer>
