--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
                     </label>
                 </div>
                 <div class="results">
-                    <div class="result-comntainer">
+                    <div class="result-container">
                         <h2 class="title">%title%</h2>
                         <p class="result">%result%</p>
                     </div>
                     <h3 class="summary">%message%</h3>
                 </div>
             </section>
-            <button id="submit" class="green-btn btn test-btn">Далее</button>
+            <button id="submit" class="green-btn btn test-btn" >Далее</button>
+            <button id="back" class="hide" onclick="prevQuestion()">Назад</button>
         </article>
     </main>
     <footer></footer>
