--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
             </section>
             <button id="submit" class="green-btn btn test-btn" >Далее</button>
-            <button id="back" class="hide" onclick="prevQuestion()">Назад</button>
+            <!-- <button id="back" class="hide" onclick="prevQuestion()">Назад</button> -->
         </article>
     </main>
     <footer></footer>
