--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
         <a href="./index.html">mbti.</a>
     </header>
     <main>
-        <p id="description">Методика Д. Кейрси позволяет определить психологический тип личности, в основе которого лежат наиболее устойчивые ее характеристики,
-            обусловленные темпераментом и выражающиеся в типичных способах
-            поведения личности в тех или иных ситуациях. Предлагаемый опросник
-            включает 70 пар утверждений, имеющих отношение к различным жизненным ситуациям, в которых человек выбирает свой способ поведения,
-            проявляет определенную позицию. Совокупность таких ситуаций и оценка личностью себя в этих ситуациях позволяют составить представление
-            об особенностях ее психологического типа, определить его и дать интерпретацию его психологического содержания. 
-        </p>
-        <div>
-            <img src="./img/3d-flame-naked-man-standing-in-front-of-window-at-night.png" alt="">
-            <a href="#" onclick="startBtn()">Начать</a>
-        </div>
+        <section class="first-screen">
+            <p id="description">Методика Д. Кейрси позволяет определить психологический тип личности, в основе которого лежат наиболее устойчивые ее характеристики,
+                обусловленные темпераментом и выражающиеся в типичных способах
+                поведения личности в тех или иных ситуациях. Предлагаемый опросник
+                включает 70 пар утверждений, имеющих отношение к различным жизненным ситуациям, в которых человек выбирает свой способ поведения,
+                проявляет определенную позицию. Совокупность таких ситуаций и оценка личностью себя в этих ситуациях позволяют составить представление
+                об особенностях ее психологического типа, определить его и дать интерпретацию его психологического содержания. 
+            </p>
+            <div>
+                <img src="./img/3d-flame-naked-man-standing-in-front-of-window-at-night.png" alt="">
+                <a href="#" onclick="startBtn()">Начать</a>
+            </div>
+        </section>
 
         <article class="quiz hide" id="quiz">
             <section class="progress">
@@ -51,7 +53,7 @@
                     <h3 class="summary">%message%</h3>
                 </div>
             </section>
-            <button id="submit" class="green-btn btn test-btn" >Далее</button>
+            <button id="submit" class="" >Далее</button>
             <!-- <button id="back" class="hide" onclick="prevQuestion()">Назад</button> -->
         </article>
     </main>
